{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 297,
  "lineage": "3efc86f1-f89d-4747-7dea-3c90834d3fa1",
  "resources": [
    {
      "module": "module.preprod.module.api",
      "mode": "managed",
      "type": "aws_elb",
      "name": "api",
      "provider": "module.preprod.module.api.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:999486733151:loadbalancer/heticmadu-preprod-api",
            "availability_zones": [
              "eu-west-3a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "heticmadu-preprod-api-1849106505.eu-west-3.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:4000/api",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "heticmadu-preprod-api",
            "idle_timeout": 400,
            "instances": [
              "i-0329cf32bc0acd451",
              "i-08c9e6cd33d472c84"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 4000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "heticmadu-preprod-api",
            "security_groups": [
              "sg-0d2182200c30fd2bf"
            ],
            "source_security_group": "999486733151/default_elb_1f8e904a-c116-3092-9842-ede4044d963e",
            "source_security_group_id": "sg-0d2182200c30fd2bf",
            "subnets": [
              "subnet-4380862a"
            ],
            "tags": {
              "Name": "heticmadu-preprod-api"
            },
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_key_pair.heticmadu",
            "module.preprod.module.api.aws_instance.api",
            "module.preprod.module.api.aws_security_group.api"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.api",
      "mode": "managed",
      "type": "aws_elb",
      "name": "api",
      "provider": "module.prod.module.api.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:999486733151:loadbalancer/heticmadu-prod-api",
            "availability_zones": [
              "eu-west-3a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "heticmadu-prod-api-727425037.eu-west-3.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:4000/api",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "heticmadu-prod-api",
            "idle_timeout": 400,
            "instances": [
              "i-05fa74136536d3f8c",
              "i-0b900d40814137385"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 4000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "heticmadu-prod-api",
            "security_groups": [
              "sg-0d2182200c30fd2bf"
            ],
            "source_security_group": "999486733151/default_elb_1f8e904a-c116-3092-9842-ede4044d963e",
            "source_security_group_id": "sg-0d2182200c30fd2bf",
            "subnets": [
              "subnet-4380862a"
            ],
            "tags": {
              "Name": "heticmadu-prod-api"
            },
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_key_pair.heticmadu",
            "module.prod.module.api.aws_instance.api",
            "module.prod.module.api.aws_security_group.api"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.client",
      "mode": "managed",
      "type": "aws_elb",
      "name": "client",
      "provider": "module.prod.module.client.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:999486733151:loadbalancer/heticmadu-prod-client",
            "availability_zones": [
              "eu-west-3a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "heticmadu-prod-client-876968821.eu-west-3.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:3000/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "heticmadu-prod-client",
            "idle_timeout": 400,
            "instances": [
              "i-061134d9368cf59b4",
              "i-0e7683ef07584cb2b"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 3000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "heticmadu-prod-client",
            "security_groups": [
              "sg-0d2182200c30fd2bf"
            ],
            "source_security_group": "999486733151/default_elb_1f8e904a-c116-3092-9842-ede4044d963e",
            "source_security_group_id": "sg-0d2182200c30fd2bf",
            "subnets": [
              "subnet-4380862a"
            ],
            "tags": {
              "Name": "heticmadu-prod-client"
            },
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_key_pair.heticmadu",
            "module.prod.module.client.aws_instance.client",
            "module.prod.module.client.aws_security_group.client"
          ]
        }
      ]
    },
    {
      "module": "module.preprod.module.client",
      "mode": "managed",
      "type": "aws_elb",
      "name": "client",
      "provider": "module.preprod.module.client.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:999486733151:loadbalancer/heticmadu-preprod-client",
            "availability_zones": [
              "eu-west-3a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "heticmadu-preprod-client-2017618020.eu-west-3.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:3000/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "heticmadu-preprod-client",
            "idle_timeout": 400,
            "instances": [
              "i-07480caf0e3a52002",
              "i-0796c2a5071a9d5b9"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 3000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "heticmadu-preprod-client",
            "security_groups": [
              "sg-0d2182200c30fd2bf"
            ],
            "source_security_group": "999486733151/default_elb_1f8e904a-c116-3092-9842-ede4044d963e",
            "source_security_group_id": "sg-0d2182200c30fd2bf",
            "subnets": [
              "subnet-4380862a"
            ],
            "tags": {
              "Name": "heticmadu-preprod-client"
            },
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_key_pair.heticmadu",
            "module.preprod.module.client.aws_instance.client",
            "module.preprod.module.client.aws_security_group.client"
          ]
        }
      ]
    },
    {
      "module": "module.preprod.module.api",
      "mode": "managed",
      "type": "aws_instance",
      "name": "api",
      "each": "list",
      "provider": "module.preprod.module.api.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e11cbb34015ff725",
            "arn": "arn:aws:ec2:eu-west-3:999486733151:instance/i-08c9e6cd33d472c84",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c9e6cd33d472c84",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "heticmadu",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01874696b77254666",
            "private_dns": "ip-172-31-30-12.eu-west-3.compute.internal",
            "private_ip": "172.31.30.12",
            "public_dns": "ec2-15-188-86-110.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.86.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-095eea21728cf9316",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "heticmadu-preprod-api"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-3be5bc40",
            "tags": {
              "Name": "heticmadu-preprod-api",
              "component": "api",
              "stage": "preprod"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-079a83cc19c99006c"
            ]
          },
          "dependencies": [
            "aws_key_pair.heticmadu",
            "module.preprod.module.api.aws_security_group.api"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e11cbb34015ff725",
            "arn": "arn:aws:ec2:eu-west-3:999486733151:instance/i-0329cf32bc0acd451",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0329cf32bc0acd451",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "heticmadu",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06c6d5fb3563993c8",
            "private_dns": "ip-172-31-25-230.eu-west-3.compute.internal",
            "private_ip": "172.31.25.230",
            "public_dns": "ec2-35-180-253-171.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.253.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0eec04ae99511a3f0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "heticmadu-preprod-api"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-3be5bc40",
            "tags": {
              "Name": "heticmadu-preprod-api",
              "component": "api",
              "stage": "preprod"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-079a83cc19c99006c"
            ]
          },
          "dependencies": [
            "aws_key_pair.heticmadu",
            "module.preprod.module.api.aws_security_group.api"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.api",
      "mode": "managed",
      "type": "aws_instance",
      "name": "api",
      "each": "list",
      "provider": "module.prod.module.api.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e11cbb34015ff725",
            "arn": "arn:aws:ec2:eu-west-3:999486733151:instance/i-05fa74136536d3f8c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05fa74136536d3f8c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "heticmadu",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0db492b2d919a3aa5",
            "private_dns": "ip-172-31-30-72.eu-west-3.compute.internal",
            "private_ip": "172.31.30.72",
            "public_dns": "ec2-52-47-115-150.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.115.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-091c1e23380e2e1da",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "heticmadu-prod-api"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-3be5bc40",
            "tags": {
              "Name": "heticmadu-prod-api",
              "component": "api",
              "stage": "prod"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05cf8e9ad49e22a60"
            ]
          },
          "dependencies": [
            "aws_key_pair.heticmadu",
            "module.prod.module.api.aws_security_group.api"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e11cbb34015ff725",
            "arn": "arn:aws:ec2:eu-west-3:999486733151:instance/i-0b900d40814137385",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b900d40814137385",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "heticmadu",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03883f49e226ea61e",
            "private_dns": "ip-172-31-11-115.eu-west-3.compute.internal",
            "private_ip": "172.31.11.115",
            "public_dns": "ec2-15-236-144-6.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.144.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08291d3ece3fd6c8c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "heticmadu-prod-api"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4380862a",
            "tags": {
              "Name": "heticmadu-prod-api",
              "component": "api",
              "stage": "prod"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05cf8e9ad49e22a60"
            ]
          },
          "dependencies": [
            "aws_key_pair.heticmadu",
            "module.prod.module.api.aws_security_group.api"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.client",
      "mode": "managed",
      "type": "aws_instance",
      "name": "client",
      "each": "list",
      "provider": "module.prod.module.client.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e11cbb34015ff725",
            "arn": "arn:aws:ec2:eu-west-3:999486733151:instance/i-0e7683ef07584cb2b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e7683ef07584cb2b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "heticmadu",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04ab3eda0a7762a74",
            "private_dns": "ip-172-31-19-66.eu-west-3.compute.internal",
            "private_ip": "172.31.19.66",
            "public_dns": "ec2-35-180-207-95.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.207.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0444aff90ccdb38a3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "heticmadu-prod-client"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-3be5bc40",
            "tags": {
              "Name": "heticmadu-prod-client",
              "component": "client",
              "stage": "prod"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09778c0eb86b00fb4"
            ]
          },
          "dependencies": [
            "aws_key_pair.heticmadu",
            "module.prod.module.client.aws_security_group.client"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e11cbb34015ff725",
            "arn": "arn:aws:ec2:eu-west-3:999486733151:instance/i-061134d9368cf59b4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-061134d9368cf59b4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "heticmadu",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c7ea063a4374d453",
            "private_dns": "ip-172-31-21-6.eu-west-3.compute.internal",
            "private_ip": "172.31.21.6",
            "public_dns": "ec2-35-180-85-41.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.85.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-084509e662a59e3d4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "heticmadu-prod-client"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-3be5bc40",
            "tags": {
              "Name": "heticmadu-prod-client",
              "component": "client",
              "stage": "prod"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09778c0eb86b00fb4"
            ]
          },
          "dependencies": [
            "aws_key_pair.heticmadu",
            "module.prod.module.client.aws_security_group.client"
          ]
        }
      ]
    },
    {
      "module": "module.preprod.module.client",
      "mode": "managed",
      "type": "aws_instance",
      "name": "client",
      "each": "list",
      "provider": "module.preprod.module.client.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e11cbb34015ff725",
            "arn": "arn:aws:ec2:eu-west-3:999486733151:instance/i-07480caf0e3a52002",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07480caf0e3a52002",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "heticmadu",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06dad9ff5666d5fa0",
            "private_dns": "ip-172-31-22-111.eu-west-3.compute.internal",
            "private_ip": "172.31.22.111",
            "public_dns": "ec2-15-188-86-207.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.86.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07f699e5906c3f29c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "heticmadu-preprod-client"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-3be5bc40",
            "tags": {
              "Name": "heticmadu-preprod-client",
              "component": "client",
              "stage": "preprod"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d732c0cfbe893e95"
            ]
          },
          "dependencies": [
            "aws_key_pair.heticmadu",
            "module.preprod.module.client.aws_security_group.client"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e11cbb34015ff725",
            "arn": "arn:aws:ec2:eu-west-3:999486733151:instance/i-0796c2a5071a9d5b9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0796c2a5071a9d5b9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "heticmadu",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05e11e87d5c65ddce",
            "private_dns": "ip-172-31-9-67.eu-west-3.compute.internal",
            "private_ip": "172.31.9.67",
            "public_dns": "ec2-35-180-226-4.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.226.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-011a94d2c1d64bb97",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "heticmadu-preprod-client"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4380862a",
            "tags": {
              "Name": "heticmadu-preprod-client",
              "component": "client",
              "stage": "preprod"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d732c0cfbe893e95"
            ]
          },
          "dependencies": [
            "aws_key_pair.heticmadu",
            "module.preprod.module.client.aws_security_group.client"
          ]
        }
      ]
    },
    {
      "module": "module.preprod.module.api",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api",
      "provider": "module.preprod.module.api.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:999486733151:security-group/sg-079a83cc19c99006c",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079a83cc19c99006c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "api",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              }
            ],
            "name": "heticmadu-preprod-api",
            "name_prefix": null,
            "owner_id": "999486733151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "heticmadu-preprod-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-d1ced5b8"
          }
        }
      ]
    },
    {
      "module": "module.prod.module.api",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api",
      "provider": "module.prod.module.api.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:999486733151:security-group/sg-05cf8e9ad49e22a60",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05cf8e9ad49e22a60",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "api",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              }
            ],
            "name": "heticmadu-prod-api",
            "name_prefix": null,
            "owner_id": "999486733151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "heticmadu-prod-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-d1ced5b8"
          }
        }
      ]
    },
    {
      "module": "module.prod.module.client",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "client",
      "provider": "module.prod.module.client.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:999486733151:security-group/sg-09778c0eb86b00fb4",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09778c0eb86b00fb4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "client",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "heticmadu-prod-client",
            "name_prefix": null,
            "owner_id": "999486733151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "heticmadu-prod-client"
            },
            "timeouts": null,
            "vpc_id": "vpc-d1ced5b8"
          }
        }
      ]
    },
    {
      "module": "module.preprod.module.client",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "client",
      "provider": "module.preprod.module.client.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:999486733151:security-group/sg-0d732c0cfbe893e95",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d732c0cfbe893e95",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "client",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "heticmadu-preprod-client",
            "name_prefix": null,
            "owner_id": "999486733151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "heticmadu-preprod-client"
            },
            "timeouts": null,
            "vpc_id": "vpc-d1ced5b8"
          }
        }
      ]
    },
    {
      "module": "module.prod.module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:999486733151:security-group/sg-0061ce0f906e0ef21",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0061ce0f906e0ef21",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05cf8e9ad49e22a60"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "heticmadu-prod-db",
            "name_prefix": null,
            "owner_id": "999486733151",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-d1ced5b8"
          },
          "dependencies": [
            "module.prod.module.api.aws_security_group.api"
          ]
        }
      ]
    },
    {
      "module": "module.preprod.module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:999486733151:security-group/sg-0359d3845213db117",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0359d3845213db117",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-079a83cc19c99006c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "heticmadu-preprod-db",
            "name_prefix": null,
            "owner_id": "999486733151",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-d1ced5b8"
          },
          "dependencies": [
            "module.preprod.module.api.aws_security_group.api"
          ]
        }
      ]
    }
  ]
}